syntax = "proto3";

// 在todo_server目录下执行
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative pb/blog.proto

//option go_package = "path;name";
//path 表示生成的go文件的存放地址，会自动生成目录的。
//name 表示生成的go文件所属的包名
option go_package="./pb";
// 定义包名
package pb;

// 定义服务
service BlogService {
  // SayHello 方法
  rpc GetBlog (GetBlogRequest) returns (GetBlogResponse) {}
}

// 请求消息
message GetBlogRequest {
  string title = 1;
}

// 响应消息
message GetBlogResponse {
  repeated Blog blog = 1;
}

message Blog {
  string author = 1;
  string title = 2;
  string content = 3;
}